# tools

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  .pyproject.toml.kate-swp  .readthedocs.yaml  README.md  conanfile.py  meson.build  meson_options.txt  pyproject.toml  pytest.ini  requirements.txt  tools.kdev4  tools.py
.reuse/: dep5
python/: meson.build
python/tests/: test_progressbars.py  test_template.py  test_timeconv.py  test_timeconv2.py  test_timeconv_ext.py
python/tests/classhelper/: test_objectprinter.py
python/tests/classhelpers/: test_objectprinter.py
python/tests/pyhelper/: test_pyindexerslice.py
python/tests/scripts/: test_mbes.py  test_oceanographic.py  test_sbes.py
python/tests/vectorinterpolators/: test_common.py  test_exceptions.py  test_interpolation_akima.py  test_interpolation_linear.py  test_interpolation_nearest.py  test_interpolation_slerp.py
python/themachinethatgoesping/scripts/: __init__.py  mbes.py  nearfield.py  oceanographic.py  plot_tools.py  read_xcf.py  sbes.py
python/themachinethatgoesping/tools/: __init__.py  _submodule_helper.py  timeconv.py
python/themachinethatgoesping/tools_ext/: __init__.py  timeconv_ext.py
src/: __init__.py.in  meson.build
src/nanomodule/: m_container_intersection.cpp  m_container_intersection.hpp  m_downsampling.cpp  m_downsampling.hpp  m_helper.cpp  m_helper.hpp  m_progressbars.cpp  m_progressbars.hpp  m_simd.cpp  m_simd.hpp  m_timeconv.cpp  m_timeconv.hpp  meson.build  mkdoc.py  module.cpp  new_doc_header.hpp
src/nanomodule/classhelper/: c_objectprinter.cpp  module.cpp  module.hpp
src/nanomodule/pyhelper/: c_pyindexer.cpp  module.cpp  module.hpp
src/nanomodule/vectorinterpolators/: c_akimainterpolator.cpp  c_bivectorinterpolator.cpp  c_linearinterpolator.cpp  c_nearestinterpolator.cpp  c_slerpinterpolator.cpp  module.cpp  module.hpp
src/pch/: tools_tools_cppy.hpp  tools_tools_nanopy.hpp
src/py_tools/: __init__.py.in  m_datetime.cpp  m_datetime.h  m_timeconv.cpp  m_timeconv.h  meson.build  module.cpp
src/pymodule/: docstrings.hpp  m_helper.cpp  m_helper.hpp  m_progressbars.cpp  m_progressbars.hpp  m_timeconv.cpp  m_timeconv.hpp  meson.build  mkdoc.py  mkdoc.sh  mkdoc.xsh  module.cpp  new_doc_header.hpp
src/pymodule/classhelper/: c_objectprinter.cpp  module.cpp  module.hpp
src/pymodule/classhelpers/: c_objectprinter.cpp  module.cpp  subm_objectprinter.cpp
src/pymodule/pch/: pch.hpp
src/pymodule/pyhelper/: c_pyindexer.cpp  module.cpp  module.hpp
src/pymodule/rotationfunctions/: c_quaternions.cpp  module.cpp  module.hpp
src/pymodule/vectorinterpolators/: c_akimainterpolator.cpp  c_bivectorinterpolator.cpp  c_linearinterpolator.cpp  c_nearestinterpolator.cpp  c_slerpinterpolator.cpp  module.cpp  module.hpp  subm_akimainterpolator.cpp  subm_linearinterpolator.cpp  subm_nearestinterpolator.cpp  subm_slerpinterpolator.cpp
src/tests/: meson.build  test_main.cpp  timeconv.test.cpp  tutorial.test.cpp
src/tests/bitsery_helper/: custom_types.test.cpp
src/tests/bitsery_helpers/: custom_types.test.cpp
src/tests/classhelper/: option.test.cpp
src/tests/helper/: container_intersection.test.cpp  defaultsharedpointermap.test.cpp  downsampling.test.cpp
src/tests/math/: simd.test.cpp
src/tests/pyhelper/: pyindexer.test.cpp
src/tests/rotationfunctions/: helper.test.cpp  quaternions.test.cpp
src/tests/vectorinterpolators/: akima.test.cpp  bivector.test.cpp  common.test.cpp  exceptions.test.cpp  linear.test.cpp  nearest.test.cpp  slerp.test.cpp
src/themachinethatgoesping/: make_pch.py  meson.build
src/themachinethatgoesping/tools/: hashhelper.hpp  helper.hpp  helpers.hpp  meson.build  progressbars.hpp  timeconv.cpp  timeconv.hpp  vectorinterpolators.hpp
src/themachinethatgoesping/tools_nanobind/: classhelper.hpp  datetime.cpp  datetime.hpp  enumhelper.hpp  meson.build  nanobind_xtensor.hpp  ostream_redirect.hpp  pytensor_nanobind.hpp  pytensor_nanobind.old.hpp  scoped_ostream_redirect.hpp
src/themachinethatgoesping/tools_pybind/: classhelper.hpp  classhelpers.hpp  datetime.cpp  datetime.hpp  enumhelper.hpp  meson.build
src/themachinethatgoesping/tools_pymodule/: docstrings.hpp  m_timeconv.hpp
src/tools/: DateTime.cpp  datetime.cpp  datetime.h  interpolation.h  meson.build  timeconv.cpp  timeconv.h  timeconv.hpp  vectorinterpolators.h  vectorinterpolators.hpp
src/tools/bitsery/: helpers.hpp
src/tools/bitsery_helpers/: classhelpers.hpp  helpers.hpp
src/tools/classhelpers/: objectprinter.hpp
src/tools/interpolation/: i_interpolator.h  linear.h  linearinterpolator.h  nearest.h  nearestinterpolator.h  snippet.h
src/tools/pybind11/: classhelpers.hpp
src/tools/pybind11_helpers/: classhelpers.hpp
src/tools/rotationfunctions/: quaternions.hpp
src/tools/vectorinterpolators/: akimainterpolator.h  akimainterpolator.hpp  i_interpolator.h  i_interpolator.hpp  i_pairinterpolator.h  i_pairinterpolator.hpp  linearinterpolator.h  linearinterpolator.hpp  nearestinterpolator.h  nearestinterpolator.hpp  slerpinterpolator.hpp
src/tools_pymodule/: docstrings.h  docstrings.h.old  docstrings.hpp  m_timeconv.cpp  meson.build  mkdoc.sh  module.cpp
src/tools_pymodule/classhelpers/: module.cpp  module.hpp  subm_objectprinter.cpp
src/tools_pymodule/interpolation/: module.cpp  module.h  subm_linearinterpolator.cpp  subm_nearestinterpolator.cpp
src/tools_pymodule/vectorinterpolators/: module.cpp  subm_akimainterpolator.cpp  subm_linearinterpolator.cpp  subm_nearestinterpolator.cpp  subm_slerpinterpolator.cpp
subprojects/packagefiles/bitsery/: meson.build
subprojects/packagefiles/fast_float/: meson.build
subprojects/packagefiles/flat_map/: meson.build
subprojects/packagefiles/fmt/: meson.build
subprojects/packagefiles/hinnant-date/: LICENSE.build  meson.build  meson_options.txt
subprojects/packagefiles/indicators/: meson.build
tests/: meson.build
tests/pytest/: test_timeconv.py  test_timeconv_ext.py
tests/pytests/: meson.build
tests/tools/: DateTime.test.h  datetime.test.cpp  meson.build  test_main.cpp  timeconv.test.cpp  tutorial.test.cpp
(+256 files in other folders)
