# SPDX-FileCopyrightText: 2022 Peter Urban, Ghent University
#
# SPDX-License-Identifier: CC0-1.0

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "themachinethatgoesping"
authors = [{name = "Peter Urban", email = "peter.urban@ugent.be"},{name = "More to follow"}]
dynamic = ["version", "description"]
